# maestro-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
docs/: architecture-decisions.md  decision-cards-rag.md
docs/adr/: ADR-001-agent-framework-selection.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css
services/agent-core/: Dockerfile  pyproject.toml
services/agent-core/app/: clients.py  graph.py  guardrails.py  main.py  memory.py  multi_agent.py  settings.py
services/agent-core/app/agents/: __init__.py  critic.py  roster.py  supervisor.py  worker.py
services/agent-core/app/tools/: __init__.py  base.py  calculator.py  code.py  knowledge.py  order.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: main.py  ratelimit.py  security.py  settings.py
services/llm-gateway/: Dockerfile  pyproject.toml
services/llm-gateway/app/: main.py  pricing.py  router.py  settings.py
services/llm-gateway/app/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
services/order-service/: Dockerfile  pyproject.toml
services/order-service/app/: main.py  store.py
services/rag-service/: Dockerfile  pyproject.toml
services/rag-service/app/: chunking.py  db.py  embeddings.py  main.py  service.py  settings.py
services/sandbox-runner/: Dockerfile  pyproject.toml
services/sandbox-runner/app/: main.py  settings.py  workspace.py
