[project]
name = "agent-core"
version = "0.1.0"
description = "LangGraph agent orchestration: Planner + ReAct tool loop + guardrails + memory."
requires-python = ">=3.12"
dependencies = [
    "agent-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "langgraph>=0.2",
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
