[project]
name = "gateway"
version = "0.1.0"
description = "Edge gateway: JWT auth, RBAC, rate limiting, prompt-injection pre-filter, BFF."
requires-python = ">=3.12"
dependencies = [
    "agent-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "redis>=5.0",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
