[project]
name = "llm-gateway"
version = "0.1.0"
description = "Model-provider abstraction: Claude Opus 4.8 (primary) / OpenAI (fallback) with cost metering."
requires-python = ">=3.12"
dependencies = [
    "agent-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.39",
    "openai>=1.40",
    "tenacity>=8.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
