[project]
name = "order-service"
version = "0.1.0"
description = "Mock business order system the agent integrates with (orders, logistics, refunds w/ HITL)."
requires-python = ">=3.12"
dependencies = [
    "agent-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
