[project]
name = "sandbox-runner"
version = "0.1.0"
description = "Owns the agent's code workspace and runs its tests in isolation (coding agent)."
requires-python = ">=3.12"
dependencies = [
    "agent-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
